syntax = "proto3";
package com.pokebattler.fight.data.proto;
import "com/pokebattler/fight/data/proto/PokemonData.proto";
import "com/pokebattler/fight/data/proto/PokemonMove.proto";
import "com/pokebattler/fight/data/proto/PokemonId.proto";
import "com/pokebattler/fight/data/proto/Fight.proto";

enum SortType {
	POWER=0;
	WIN = 1;
	TIME = 2;
	DPS = 3;
	POTIONS = 4;
	OVERALL = 5;
}

enum FilterType {
	NO_FILTER=0;
	COUNTERS = 1;
	TOP = 2;
	TYPE = 3;
	POKEMON = 4;
	PRESTIGE = 5;
}
message RankingResult {
	repeated AttackerResult attackers = 1;
	AttackStrategyType attackStrategy = 2;
	AttackStrategyType defenseStrategy = 3;
	int64 numSims = 4;
	DodgeStrategyType dodgeStrategy = 5;
	int64 seed = 6;
	SortType sortType = 7;
}
message AttackerResult {
	PokemonId pokemon_id = 1;
	repeated AttackerSubResult byMove = 2;
	int32 cp = 3;
	int64 numSims = 4;
}

message AttackerSubResult {
	PokemonMove move_1 = 1;
	PokemonMove move_2 = 2;
	repeated DefenderResult defenders = 3;
	SubResultTotal total = 4;
}
message SubResultTotal {
	int32 combat_time = 1;
	int32 damage_taken = 2;
	int32 damage_dealt = 3;
	int32 num_wins = 4;
	int32 num_losses = 5;
	double power = 6;
	int32 effective_combat_time = 7;
	double potions = 8;
	double overallRating = 9;
	int64 numSims = 10;
}

message DefenderResult {
	PokemonId pokemon_id = 1;
	repeated DefenderSubResult byMove = 2;
	int32 cp = 3;
	SubResultTotal total = 4;
}
message DefenderSubResult {
	PokemonMove move_1 = 1;
	PokemonMove move_2 = 2;
	FightResult result = 3;
}
